
// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = 'proto2';

package github.com.argoproj.argo_cd.pkg.apis.application.v1alpha1;

import "k8s.io/api/core/v1/generated.proto";
import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";
import "k8s.io/apimachinery/pkg/util/intstr/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "v1alpha1";

// Application is a definition of Application resource.
// +genclient
// +genclient:noStatus
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message Application {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ApplicationSpec spec = 2;

  optional ApplicationStatus status = 3;
}

// ApplicationList is list of Application resources
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ApplicationList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Application items = 2;
}

// ApplicationSource contains secret reference which has information about github repository, path within repository and target application environment.
message ApplicationSource {
  // GitRepoSecret is a secret reference which has information about github repository.
  optional k8s.io.api.core.v1.LocalObjectReference gitRepoSecret = 1;

  // Path is a directory path within repository which contains ksonnet project.
  optional string path = 2;

  // Environment is a ksonnet project environment name.
  optional string environment = 3;
}

// ApplicationSpec represents desired application state. Contains link to repository with application definition and additional parameters link definition revision.
message ApplicationSpec {
  optional string targetRevision = 1;

  optional ApplicationSource source = 2;
}

// ApplicationStatus contains information about application status in target environment.
message ApplicationStatus {
  // ComparisonResult is a comparison result of application spec and deployed application.
  optional string comparisonResult = 1;

  // DifferenceDetails contains string representation of detected differences between application spec and deployed application.
  optional string differenceDetails = 2;
}

// Cluster is the definition of a cluster resource
// +genclient
// +genclient:noStatus
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message Cluster {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional ClusterSpec spec = 2;
}

// ClusterList is a collection of Clusters.
// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
message ClusterList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Cluster items = 2;
}

// ClusterSpec is the cluster specification
message ClusterSpec {
  // Server is the API server URL of the Kubernetes cluster
  optional string server = 1;
}

// Respository is a Git repository holding application configurations
message Respository {
  optional string repo = 1;

  optional string username = 2;

  optional string password = 3;
}

// RespositoryList is a collection of Repositories.
message RespositoryList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated Respository items = 2;
}

